--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit
-pandas
-numpy
-scikit-learn
-requests
+streamlit==1.28.0
+pandas==2.1.1
+numpy==1.26.0
+scikit-learn==1.3.1
+requests==2.31.0
