--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-streamlit==1.28.0
-pandas==2.1.1
-numpy==1.26.0
-scikit-learn==1.3.1
+streamlit==1.26.0
 requests==2.31.0
+pandas==2.0.3
+Pillow==10.0.0
